# zio_front

./: .gitignore  .gitmodules  Makefile  README.md  build.sbt
assets/json/: postgres.json  req0.txt
assets/json/cppk/: influx.json
assets/json/loco/: kafka.json
doc/: kafka.md  system.md  tasks.md
project/: plugins.sbt
src/main/resources/: application.conf  logback.xml
src/main/scala/: Main.scala  config.scala  domain.scala
src/main/scala/clover/tsp/front/: Main.scala  config.scala
src/main/scala/clover/tsp/front/domain/: ClickHouseTSP.scala  InfluxDBTSP.scala  KafkaTSP.scala  Postgres.scala
src/main/scala/domain/: ClickHouseTSP.scala  Common.scala  InfluxDBTSP.scala  KafkaTSP.scala  ToDo.scala
src/main/scala/http/: DBService.scala  Service.scala
src/main/scala/kafka/: ArrowPkg.scala  ConsumerArrow.scala  Kafka.scala
src/main/scala/repository/: DBInfoRepository.scala  DoobieRepository.scala  InMemoryRepository.scala  Repository.scala  package.scala
src/test/scala/: HTTPSpec.scala  HTTPSpec2.scala  UnitSpec.scala
src/test/scala/http/: JsonSpec.scala  ServiceSpec.scala  SimpleSpec.scala  TSPSpec.scala
src/test/scala/specs2/: TSPOtherSpec.scala  TSPProcessingSpec.scala
test/: README.md  config.yml  pyproject.toml  test_simple.py
test/json/cppk/: influx.json
test/json/loco/: kafka.json
test/tests/: base.py  utils.py
test/tests/fixtures/config/: docker-compose.yml
test/tests/fixtures/postgresql/: init.sql
test/tests/integration/: test_clickhouse.py  test_integration.py
test/tests/simple/: test_simple.py
(+10 files in other folders)
