[tool.poetry]
name = "zio_front_tests"
version = "0.0.1"
description = "Tests for ZIO front"
authors = ["Andrey Romanov"]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.22"
argparse = "^1.4"
layered-yaml-attrdict-config = "^18.12"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
